[package]
name = "pkthere"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
debug = 0

[dependencies]
bytemuck = { version = "1.24.0", features = ["must_cast"] }
ctrlc = "3.5.1"
libc = "0.2.178"
nix = { version = "0.30.1", features = ["user"] }
serde_json = "1.0.145"
socket2 = { version = "0.6.1", features = ["all"] }
wide = { version = "1.0.2", features = ["serde"] }
